--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,9 +21,10 @@
     </form>
     <img id="loading" width="30px" style="display:none" src="loading.gif" alt="" srcset="">
     <div class="mb-3">
-      <textarea class="form-text" name="" id="res" cols="" style="
-      width: 100%;
-  " rows="10"><% if (typeof item == 'object') { %>
+      <textarea class="form-text" name="" id="res" cols="" style="width: 100%;" rows="10" placeholder="Tên file: Tiến sĩ Lê Thẩm Dương  Tổng quan về quản trị mâu thuẫn.zip
+Link:  https://www.fshare.vn/file/X5K72DHY4FGS?token=1648636837
+Size: 1.82 GB
+Mình cảm ơn" x><% if (typeof item == 'object') { %>
 Tên file: <%- item.name %>
 Link:  <%- item.link %>
 Size: <%- item.size %>
@@ -32,6 +33,6 @@ Mình cảm ơn<% } %>
     </div>
     
   </div>
-  <!-- <script src="script.js"></script> -->
+  <script src="script.js"></script>
 </body>
 </html>
